--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 	<meta name="author" content="Marc Majcher">
 
 	<link rel="shortcut icon" href="/images/favicon.ico">
-	<link rel="stylesheet" href="/static/css/bootstrap.min.css">
-	<link rel="stylesheet" href="/static/css/style.css">
+<!-- 	<link rel="stylesheet" href="/static/css/bootstrap.min.css">
+ -->	<link rel="stylesheet" href="/static/css/style.css">
 
 	<link href="/static/fa/css/font-awesome.min.css" rel="stylesheet" type="text/css">
     <link href="http://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css">
@@ -27,9 +27,20 @@
 
 </head>
 <body id="page-top" class="index">
-	
 
+<div id="main-container">
+	<h1 class="name">Marc Majcher</h1>
+	<h2 class="trigger left-trigger">Left</h2>
+	<h2 class="trigger right-trigger">Right</h2>
+	<div id="head-images">
+		<img class="head-left-half img-head" src="/static/img/head-left-half.jpg">
+		<img class="head-right-half img-head" src="/static/img/head-right-half.jpg">
+		<img class="head-left-full img-head" src="/static/img/head-left-full.jpg">
+		<img class="head-right-full img-head" src="/static/img/head-right-full.jpg">
+	</div>
+</div>
 
+<!--
 <div class="container-fluid main-container">
 	<div class="row">
 		<div class="col-md-offset-1 col-md-4">
@@ -52,7 +63,7 @@
 		</div>
 	</div>
 </div>
-
+-->
 
 
 
