--- a/index.html
+++ b/index.html
@@ -20,11 +20,8 @@
         <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
         <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
     <![endif]-->
-
 	
 	<title>Marc Majcher</title>
-	
-
 </head>
 <body id="page-top" class="index">
 
@@ -32,6 +29,9 @@
 	<h1 class="name">Marc Majcher</h1>
 	<h2 class="trigger left-trigger">Left</h2>
 	<h2 class="trigger right-trigger">Right</h2>
+	
+	<!-- Move triggers to transparent divs across page -->
+
 	<div id="head-images">
 		<img class="head-left-half img-head" src="/static/img/head-left-half.jpg">
 		<img class="head-right-half img-head" src="/static/img/head-right-half.jpg">
