--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
         <use href="icons.svg#icon-example"></use>
     </svg>
 
-    <div id="main">
-        <div>
+    <main>
+        <div class="info">
             <h1>Marc Majcher</h1>
             <p>TTRPG designer/player. Director/actor/improviser.
                 Grownup computer teacher. he/them.</p>
@@ -71,7 +71,7 @@
         <div>
             <img src="https://majcher.com/img/marc.jeanpaul.jpg" alt="Marc Majcher as Jean-Paul Garou">
         </div>
-    </div>
+    </main>
 </body>
 
 <!-- 
